# wirebench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  component_request.md  feature_request.md
.github/workflows/: docs.yml  release.yml  test.yml
demos/: backup_power.py  bldc_motor.py  dice.py  digital_thermometer.py  doorbell_protector.py  fan_cooling.py  isolated_rs232.py  li_ion_fuel_gauge.py  water_alarm.py  water_alarm_split.py
demos/5v_rail_power/: README.md  five_volt_rail_power.py
demos/backup_power/: README.md  backup_power.py
demos/bldc_motor/: README.md  bldc_motor.py
demos/dice/: README.md  dice.py
demos/digital_thermometer/: README.md  digital_thermometer.py
demos/doorbell_protector/: README.md  doorbell_protector.py
demos/fan_cooling/: README.md  fan_cooling.py
demos/hello_led/: README.md  hello_led.py
demos/isolated_rs232/: README.md  isolated_rs232.py
demos/li_ion_fuel_gauge/: README.md  li_ion_fuel_gauge.py
demos/penfold_crystal_set/: README.md  penfold_crystal_set.py
demos/penfold_fuzz_unit/: README.md  penfold_fuzz_unit.py
demos/penfold_light_switch/: README.md  penfold_light_switch.py
demos/penfold_metronome/: README.md  penfold_metronome.py
demos/penfold_one_second_timer/: penfold_one_second_timer.py
demos/penfold_reaction_game/: README.md  penfold_reaction_game.py
demos/penfold_warbling_doorbuzzer/: README.md  penfold_warbling_doorbuzzer.py
demos/water_alarm/: README.md  water_alarm.py
demos/water_alarm_split/: README.md  water_alarm_split.py
docs/: assembly-guide-spec.md  backup-power-audit.md  behavioural-cell-audit-spec.md  behavioural-cell-audit.md  board-connector-spec.md  circuitry-format-spec.md  component-library-data.md  design-principles.md  export-formats-spec.md  export-framework-spec.md  index.md  learning-path.md  modelling-architecture.md  mutation-report.md  parts.md  pin-id-spec.md  prevention-benchmark.md  pydantic-remediation-spec.md  refdes-spec.md  substrate-compatibility-audit.md  test-quality.md  the-rules.md
scripts/: cov.sh  generate_substrate_audit.py  mutate.sh  render_demo_docs.py  render_parts_page.py  scaffold_component.py
src/applications/: __init__.py  water_alarm.py
src/circuitry/: __init__.py  scenarios.py
src/cli/: export.py  import_kicad.py  main.py  parts.py  parts_data.py  validate.py  validate_extractors.py
src/components/: __init__.py  cd4043.py  cd4069.py  comparator.py  inverter.py  led.py  lm393.py  nor_latch.py  rail.py  resistor.py  sn74hc04.py  tristate_buffer.py  uln2003a.py  units.py
src/framework/: __init__.py  board.py  chip.py  circuit.py  connector.py  diode.py  drive_type.py  errors.py  factor.py  format.py  format_extension.py  format_records.py  ground.py  mate.py  node.py  part.py  pin.py  pin_function.py  port.py  port_map.py  rail.py  refdes.py  registry.py  signals.py  transistor.py  units.py  wire.py
src/wirebench/: __init__.py  scenarios.py
tests/: conftest.py
tests/applications/: test_water_alarm.py
tests/cli/: test_import_kicad.py  test_parts.py  test_validate.py  test_validate_extractors.py
tests/components/: test_ams1117_33.py  test_ams1117_50.py  test_atmega2560.py  test_atmega328p.py  test_atmega32u4.py  test_attiny84.py  test_attiny85.py  test_backup_supervisor.py  test_bldc_motor_cell.py  test_bmp280.py  test_bq27546g1.py  test_buffer.py  test_capacitor.py  test_cd4017.py  test_cd4043.py  test_cd4069.py  test_cell.py  test_chip_pin_numbers.py  test_commutator.py  test_comparator.py  test_darlington_channel.py  test_decade_counter.py  test_dht11.py  test_diode_mandatory_terminals.py  test_diode_or.py  test_display5641as.py  test_drv8313.py  test_ds1307.py  test_ds18b20.py  test_esp32_wroom_32.py  test_esp8266_12f.py  test_fan_controller.py  test_ferrite_aerial.py  test_fuel_gauge.py  test_hcsr04.py  test_inductor.py  test_inverter.py  test_isolated_channel.py  test_isow7841.py  test_led.py  (+64 more)
tests/contributor/: _scaffold_harness.py  test_scaffold_emits_tests.py  test_scaffold_output.py
tests/demos/: test_all_demos_roundtrip.py  test_backup_power.py  test_bldc_motor.py  test_dice.py  test_digital_thermometer.py  test_doorbell_protector.py  test_fan_cooling.py  test_isolated_rs232.py  test_li_ion_fuel_gauge.py  test_penfold_crystal_set.py  test_penfold_fuzz_unit.py  (+5 more)
(+704 files in other folders)
